// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Switch /> component Renders children <Case /> GIVEN child as function THEN resolves for first <Case /> 1`] = `
<span>
  Case1
</span>
`;

exports[`<Switch /> component Renders children <Case /> GIVEN condition as function THEN resolves for first <Case /> 1`] = `
<Case
  condition={[Function]}
>
  <span>
    Case1
  </span>
</Case>
`;

exports[`<Switch /> component Renders children <Case /> GIVEN multiple cases w/ falsy condition then function as truthy condition THEN renders children of second <Case /> 1`] = `
<Case
  condition={[Function]}
>
  <span>
    Case2
  </span>
</Case>
`;

exports[`<Switch /> component Renders children <Case /> GIVEN multiple cases w/ falsy condition then truthy condition THEN renders children of second <Case /> 1`] = `
<Case
  condition={true}
>
  <span>
    Case2
  </span>
</Case>
`;

exports[`<Switch /> component Renders children <Case /> GIVEN multiple cases w/ truthy condition THEN renders children of first <Case /> 1`] = `
<Case
  condition={true}
>
  <span>
    Case1
  </span>
</Case>
`;

exports[`<Switch /> component Renders nothing in some cases GIVEN invalid React children THEN does not render those 1`] = `
<Case
  condition={true}
>
  <span>
    Case2
  </span>
</Case>
`;

exports[`<Switch /> component Renders nothing in some cases GIVEN multiple cases w/ all falsy condition THEN renders nothing 1`] = `""`;

exports[`<Switch /> component Renders nothing in some cases GIVEN no children THEN renders nothing 1`] = `""`;

exports[`<Switch /> component Renders the child element of <Default /> GIVEN children as function THEN renders children of <Default /> 1`] = `
<span>
  Default
</span>
`;

exports[`<Switch /> component Renders the child element of <Default /> GIVEN falsy <Case /> and <Default /> THEN renders children of <Default /> 1`] = `
<Default>
  <span>
    Default
  </span>
</Default>
`;

exports[`<Switch /> component Renders the child element of <Default /> GIVEN simple <Default /> THEN renders children of <Default /> 1`] = `
<Default>
  <span>
    Default
  </span>
</Default>
`;

exports[`<Switch /> component Renders the child element of <Default /> GIVEN truthy <Case /> and <Default /> THEN renders children of <Case /> 1`] = `
<Case
  condition={true}
>
  <span>
    Case
  </span>
</Case>
`;
